# xstruct

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/: xstruct.py
