[metadata]
name = xstruct
version = attr: xstruct.__version__
description = Serialize, deserialize and represent packed binary data in a declarative way
long_description = file: README.md
license = OSI Approved :: GNU General Public License v3 (GPLv3)
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
py_modules = xstruct

[options.packages.find]
where = src
